--- a/style.css
+++ b/style.css
@@ -43,6 +43,17 @@ a:hover {
   outline: none;
 }
 
+#bot-sender-details {
+  color: var(--primary-color);
+  resize: none;
+  margin: 0 auto;
+  height: 2em;
+  width: 50%;
+  background: var(--background-color);
+  border: 0.25em solid var(--primary-color);
+  outline: none;
+}
+
 #whocamebybot-submit {
   font-family: inherit;
   border: 0.25em solid var(--primary-color);
@@ -54,6 +65,10 @@ a:hover {
 }
 
 #bot-text::placeholder {
+  color: #14804e;
+}
+
+#bot-sender-details::placeholder {
   color: #14804e;
 }
 
